--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <name>springboot-study</name>
     <description>Demo project for Spring Boot</description>
 
+    <modules>
+        <module>springboot-interceptor</module>
+    </modules>
     <properties>
         <java.version>1.8</java.version>
     </properties>
